# oto

./: Cargo.toml  clean.sh  config.yml  cp.sh  cto_config.yml  run_client.py
src/common/: Cargo.toml
src/common/src/: lib.rs  shmem.rs  throughput_statistics.rs  txn.rs
src/memory_server/: Cargo.toml
src/memory_server/src/: data.rs  data_server.rs  dep_graph.rs  executor.rs  lib.rs
src/rpc/: Cargo.toml  build.rs
src/rpc/proto/: common.proto
src/rpc/src/: common.rs
src/server/: Cargo.toml
src/server/src/: client.rs  cto.rs  data.rs  executor.rs  lib.rs  server.rs
src/workload/: Cargo.toml
src/workload/src/: lib.rs  micro_db.rs  micro_txn.rs  small_bank_db.rs  small_bank_txn.rs  tatp_db.rs  tatp_txn.rs  tpcc_db.rs  tpcc_txn.rs
