[package]
name = "memory_server"
version = "0.1.0"
authors = ["wuhao2016 <whaohit@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rpc = { path = "../rpc" }
workload = {path = "../workload"}
common = {path = "../common"}
tokio = { version = "1.0", features = ["full"] }
tonic = "0.4.3"
tokio-stream = "0.1.6"
chrono = "0.4"
serde = "1.0"
serde_json = "1.0"