[package]
name = "server"
version = "0.1.0"
authors = ["wuhao2016 <whaohit@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "meerkat_server"
path = "src/meerkat_server.rs"

[[bin]]
name = "meerkat_client"
path = "src/meerkat_client.rs"

[[bin]]
name = "dast_server"
path = "src/dast_server.rs"

[[bin]]
name = "dast_client"
path = "src/dast_client.rs"

[[bin]]
name = "janus_server"
path = "src/janus_server.rs"

[[bin]]
name = "janus_client"
path = "src/janus_client.rs"

[[bin]]
name = "yuxi_server"
path = "src/yuxi_server.rs"

[[bin]]
name = "yuxi_client"
path = "src/yuxi_client.rs"

[dependencies]
rpc = { path = "../rpc" }
common = { path = "../common" }
meerkat = { path = "../meerkat" }
yuxi = {path = "../yuxi"}
dast ={path = "../dast"}
janus = { path = "../janus" }
tokio = { version = "1.0", features = ["full"] }
tonic = "0.4.3"
tokio-stream = "0.1.6"
tracing = { version = "0.1", features = ["log"] }
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.8"