[package]
name = "server"
version = "0.1.0"
authors = ["wuhao2016 <whaohit@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "yuxi_server"
path = "src/server.rs"

[[bin]]
name = "yuxi_client"
path = "src/client.rs"

[[bin]]
name = "yuxi_cto"
path = "src/cto.rs"


[dependencies]
rpc = {path = "../rpc"}
common = {path = "../common"}
workload = {path = "../workload"}
memory_server = {path = "../memory_server"}
tokio = { version = "1.0", features = ["full"] }
tonic = "0.4.3"
tokio-stream = "0.1.6"
tracing = { version = "0.1", features = ["log"] }
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.8"